--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,7 +5,7 @@ NODE_ENV=production
 PORT=10000
 
 # Database Configuration
-MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/gigflow?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://gigflowuser:Hk3X7wO0ONvuRbdn@gigflow.l8wxwcu.mongodb.net/gigflow?retryWrites=true&w=majority
 
 # JWT Configuration
 JWT_SECRET=your-super-secure-jwt-secret-here-make-it-very-long-and-random
